<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/fav_page"
        android:title="@string/favorite_page"
        android:contentDescription="@string/favorite_page"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="always"/>
</menu>